<resources>
    <string name="app_name">Moviepad</string>
    <string name="add_movie">Add Movie</string>

    <string name="hint_add_movie_list">Movie Name</string>
    <string name="hint_add_movie_year">Year</string>
    <string name="positive_button_create">Add To WatchList</string>
    <string name="browse_movies">Browse Movies</string>

    <string name="YouTube_API_KEY">AIzaSyAjM3HsCGtEMMEJDT9Rua9ytsilG8dRaGQ</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="movie_filter">Movie Filter</string>
    <string name="search">Search</string>
    <string name="genre">Filter by Genre</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="horror">Horror</string>
    <string name="drama">Drama</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="search_hint">Movie Name</string>
    <string name="delete_task">Delete Task</string>
    <string name="rate_me">Rate me</string>
    <string name="about">About</string>
    <string name="nerdgeeks_developer">© NerdGeeks Developer</string>
    <string name="player_banner">ca-app-pub-9551927371844997/2732674748</string>

    <!-- Test Ad -->
    <!--<string name="native_ad">ca-app-pub-3940256099942544/2793859312</string> -->
    <!--<string name="Interstitial">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="select_genre">Select Genre</string>


    <!-- Main Ad -->
    <string name="native_ad">ca-app-pub-9551927371844997/8698305530</string>
    <string name="Interstitial">ca-app-pub-9551927371844997/9800699873</string>

    <!--    Permissions    -->
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="enable">Enable</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="star">★</string>
    <string name="description">Description</string>
    <string name="cast">Cast</string>
    <string name="trailer">Trailer</string>
    <string name="watchlist">Watchlist</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait...</string>
</resources>
