<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        />

    <item
        android:title="@string/genre"
        android:id="@+id/movie_genre"
        app:showAsAction="withText"
        >
        <menu>
            <item
                android:title="@string/action"
                android:id="@+id/action"
                app:showAsAction="never"
                />

            <item
                android:title="@string/adventure"
                android:id="@+id/adventure"
                app:showAsAction="never"
                />

            <item
                android:title="@string/animation"
                android:id="@+id/animation"
                app:showAsAction="never"
                />

            <item
                android:title="@string/comedy"
                app:showAsAction="never"
                android:id="@+id/comedy"
                />

            <item
                android:title="@string/sci_fi"
                app:showAsAction="never"
                android:id="@+id/crime"
                />

            <item
                android:title="@string/horror"
                app:showAsAction="never"
                android:id="@+id/doc"
                />

            <item
                android:title="@string/drama"
                app:showAsAction="never"
                android:id="@+id/drama"
                />

            <item
                android:title="@string/mystery"
                app:showAsAction="never"
                android:id="@+id/mystery"
                />

            <item
                android:title="@string/romance"
                app:showAsAction="never"
                android:id="@+id/romance"
                />
        </menu>
    </item>
</menu>