<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/add_movie"
        android:id="@+id/action_add_movie"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        />

    <item
        android:title="@string/browse_movies"
        android:id="@+id/action_browse_movie"
        android:icon="@drawable/ic_movie"
        app:showAsAction="always"
        />

    <item
        android:title="@string/rate_me"
        android:id="@+id/action_rate"
        app:showAsAction="never"
        />

    <item
        android:title="@string/about"
        android:id="@+id/action_about"
        android:icon="@drawable/ic_movie"
        app:showAsAction="never"
        />
</menu>